Fixed section API and Service